[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://scenes/TownPanel.gd" id="1"]
[ext_resource type="PackedScene" path="res://scenes/ActionBar.tscn" id="2"]

[node name="TownPanel" type="Control"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.05, 0.05, 0.07, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
mouse_filter = 1

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 12

[node name="Header" type="HBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 8

[node name="Title" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/Header"]
layout_mode = 2
size_flags_horizontal = 3
text = "Town"

[node name="CloseButton" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/Header"]
layout_mode = 2
text = "Close"
custom_minimum_size = Vector2(0, 36)

[node name="InfoLabel" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "You are in town."
autowrap_mode = 3

[node name="ActionRow" type="HBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 8

[node name="RestButton" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/ActionRow"]
layout_mode = 2
size_flags_horizontal = 3
text = "Rest"
custom_minimum_size = Vector2(0, 44)

[node name="CraftButton" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/ActionRow"]
layout_mode = 2
size_flags_horizontal = 3
text = "Craft (plank)"
custom_minimum_size = Vector2(0, 44)

[node name="MapButton" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/ActionRow"]
layout_mode = 2
size_flags_horizontal = 3
text = "Map"
custom_minimum_size = Vector2(0, 44)

[node name="BottomRow" type="HBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_constants/separation = 8

[node name="ActionBar" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/BottomRow" instance=ExtResource("2")]
layout_mode = 2
